--- a/src/TROCAKI/TROCAKI/Views/Home/Index.cshtml
+++ b/src/TROCAKI/TROCAKI/Views/Home/Index.cshtml
@@ -109,7 +109,7 @@
                                         <div class="d-flex flex-wrap gap-1 mb-2">
                                             @foreach (CategoriaModel categoria in produto.Categorias)
                                             {
-                                                <span class="badge bg-primary">@categoria.Nome</span>
+                                                <span class="badge bg-primary overflow-hidden">@categoria.Nome</span>
                                             }
                                         </div>
                                     </div>
